syntax = "proto3";

package pb;

message WakuMessage {
    bytes payload = 1;
    string contentTopic = 2;
    uint32 version = 3;
    sint64 timestamp = 10;
    bytes meta = 11;
    bool ephemeral = 31;
    bytes rate_limit_proof = 21;
}

message RateLimitProof {
  bytes proof = 1;
  bytes merkle_root = 2;
  bytes epoch = 3;
  bytes share_x = 4;
  bytes share_y = 5;
  bytes nullifier = 6;
  bytes rln_identifier = 7;
}
